--- a/.pylintrc
+++ b/.pylintrc
@@ -64,6 +64,7 @@ disable=multiple-imports,
         unidiomatic-typecheck,
         bad-continuation,
         trailing-whitespace,
+        consider-using-f-string,
         len-as-condition,
         fixme,
         ungrouped-imports,
